# axion

./: .clang-format  .gitignore  CMakeLists.txt  README.md  repomix-output.xml
aten/: CMakeLists.txt
aten/core/: TensorIterator.h
aten/native/cpu/: BinaryOps.cpp  BlasOps.cpp  FillOps.cpp  ReduceOps.cpp  ScalarOps.cpp  ShapeOps.cpp  UnaryOps.cpp
aten/ops/: Ops.cpp  Ops.h
autograd/: AutogradMeta.cpp  AutogradMeta.h  CMakeLists.txt  Edge.h  GradMode.cpp  GradMode.h  Node.h  Variable.cpp  Variable.h
autograd/engine/: Engine.cpp  Engine.h
autograd/functions/: Accumulate.h  BasicOps.h  ReduceOps.h  UnaryOps.h
axion/: CMakeLists.txt
axion/nn/: Activations.h  Attention.h  Dropout.h  Embedding.h  LayerNorm.h  Linear.cpp  Linear.h  Loss.cpp  Loss.h  Module.h  Parameter.h  Sequential.h  Softmax.h  TransformerBlock.h  init.h
axion/optim/: Adam.h  SGD.h
benchmarks/: CMakeLists.txt
c10/: CMakeLists.txt
c10/core/: Allocator.h  AllocatorRegistry.cpp  AllocatorRegistry.h  AutogradMetaInterface.h  CPUAllocator.cpp  CPUAllocator.h  DataPtr.h  Device.h  DeviceType.h  DispatchKey.h  Dispatcher.cpp  Dispatcher.h  ScalarType.h  Storage.h  StorageImpl.cpp  StorageImpl.h  Tensor.h  TensorImpl.cpp  TensorImpl.h
c10/macros/: Macros.h
c10/util/: intrusive_ptr.h
examples/: CMakeLists.txt  xor_mlp.cpp
test/: CMakeLists.txt
test/aten/: CMakeLists.txt  ops_extended_test.cpp  ops_test.cpp  tensor_iterator_test.cpp
test/autograd/: CMakeLists.txt  autograd_meta_test.cpp  engine_test.cpp  variable_test.cpp
test/axion/: CMakeLists.txt  nn_test.cpp
test/c10/: CMakeLists.txt  allocator_test.cpp  cpu_allocator_test.cpp  dataptr_test.cpp  device_test.cpp  dispatch_test.cpp  intrusive_ptr_test.cpp  storage_impl_test.cpp  storage_test.cpp  tensor_impl_test.cpp  tensor_test.cpp
